--- a/InvestmentCalculatorSolution/InvestmentCalculatorFrontend/src/index.html
+++ b/InvestmentCalculatorSolution/InvestmentCalculatorFrontend/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>InvestmentCalculatorFrontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Access-Control-Allow-Origin" content="*">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>InvestmentCalculatorFrontend</title>
 </head>
 <body>
   <app-root></app-root>
